# weaver-memory

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README_ZH.md  pyproject.toml
benchmarks/: README.md  _safety.py  active_marker_binding_validation.py  context_capsule_stress_validation.py  context_capsule_validation.py  controlled_active_guard_validation.py  controlled_harness_run_v0_6_1.py  decision_ledger_validation.py  experience_transfer_protocol_v0_7.py  external_dataset_adapter_v0_6_4.py  graph_retrieval_baseline.py  harness_runtime_coding_debug.py  harness_runtime_core.py  harness_runtime_live_llm.py  harness_runtime_trace_loop.py  hf_dataset_candidates_check.py  l2_route_approval_validation.py  layer3_mvp_validation.py  layer3_path_promotion_e2e.py  layer3_path_promotion_lme_v2.py  layer3_path_promotion_v0_7.py  live_agent_loop_v0_6_3.py  live_lite_harness_v0_6_2.py  live_memory_loop_v0_6_3.py  llm_graph_proposal_validation.py  lme_v2_storage_check.py  locomo_mc10_adapter_check.py  longmemeval_v2_adapter_expansion_v0_6_4b.py  longmemeval_v2_adapter_v0_6_4a.py  memevobench_adapter.py  memoryagentbench_adapter_check.py  pathoflow_core_dataset_offline_eval.py  pathoflow_env_override_probe.py  pathoflow_protocol_compat_probe.py  pathoflow_tme_reduced_execution_audit.py  pathoflow_tool_native_workflow_compare.py  pathoflow_workflow_contrast_report.py  prototype_baseline.py  random_experience_accumulation_v0_7.py  real_trajectory_experiment_v0_6.py  (+8 more)
docs/: README.md  agent_test_catalog.md  architecture.md  bad_case_learning_loop.md  (+15 more)
(+623 files in other folders)
